--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -3,7 +3,7 @@
    addReviewers: true
 
  # Set to true to add assignees to pull requests
-   addAssignees: true
+   addAssignees: false
 
  # A list of reviewers to be added to pull requests (GitHub user name)
    reviewers:
@@ -17,4 +17,4 @@
 
  # A number of reviewers added to the pull request
  # Set 0 to add all the reviewers (default: 0)
-   numberOfReviewers: 0
+   numberOfReviewers: 1
