--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -12,8 +12,8 @@
     - dancernerd32
 
  # A list of keywords to be skipped the process that add reviewers if pull requests include it
-   skipKeywords:
-   - wip
+#   skipKeywords:
+#   - wip
 
  # A number of reviewers added to the pull request
  # Set 0 to add all the reviewers (default: 0)
