--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -1,4 +1,3 @@
-
  # Set to true to add reviewers to pull requests
    addReviewers: true
 
@@ -7,11 +6,17 @@
 
  # A list of reviewers to be added to pull requests (GitHub user name)
    reviewers:
-    - jasonenglish
-    - mariane-bekker
-    - dancernerd32
+    - ccangialose
     - christophermaujean
+    - czantany1
+    - dancernerd32
+    - em-gazelle
+    - ibratanov
+    - jasonenglish
+    - lawyu89
     - masimons
+    - mattmcginnis
+    - mstahl
 
  # A list of keywords to be skipped the process that add reviewers if pull requests include it
    skipKeywords:
