--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -4,19 +4,20 @@
  # Set to true to add assignees to pull requests
    addAssignees: false
 
+ # See the README for how to get usernames
  # A list of reviewers to be added to pull requests (GitHub user name)
    reviewers:
     - ccangialose
-    - christophermaujean
     - czantany1
     - dancernerd32
     - em-gazelle
     - ibratanov
-    - jasonenglish
     - lawyu89
-    - masimons
     - mattmcginnis
     - mstahl
+    - hotfusionman
+    - cachilders
+    - scabaral
 
  # A list of keywords to be skipped the process that add reviewers if pull requests include it
    skipKeywords:
