chore: Update auto_assign.yml

--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -10,12 +10,12 @@
     - ccangialose
     - em-gazelle
     - lawyu89
-    - mstahl
     - hotfusionman
     - cachilders
     - scabaral
     - otheogar
     - sonoilconte
+    - EmFoley
 
 #   - dancernerd32
 #   - ibratanov
